# claude-afk

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/claude_afk/: __init__.py  __main__.py  cli.py  config.py  permissions.py  shell.py  transcript.py
src/claude_afk/hooks/: notify.py  planapproval.py  pretooluse.py  stop.py
src/claude_afk/slack/: bridge.py  formatting.py  thread.py
tests/: conftest.py  test_cli.py  test_config.py  test_permissions.py  test_shell.py  test_transcript.py
tests/hooks/: test_notify.py  test_planapproval.py  test_pretooluse.py  test_stop.py
tests/slack/: test_bridge.py  test_formatting.py  test_thread.py
