[project]
name = "claude-afk"
version = "0.1.1"
description = "Control Claude Code remotely via Slack — approve permissions, answer questions, and continue sessions while AFK"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Deepankar Mahapatro" }]
readme = "README.md"
keywords = ["claude-code", "slack", "remote", "hooks", "permissions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0",
    "slack-sdk>=3.27",
    "websocket-client>=1.6",
]

[project.urls]
Repository = "https://github.com/deepankarm/claude-afk"

[project.scripts]
claude-afk = "claude_afk.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
 "pytest>=8.0",
 "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
